# pg_tuner

./: .gitignore
pg_tuner_mcp/: README.md  claude_desktop_config.json.example  pyproject.toml
pg_tuner_mcp/src/pg_tuner_mcp/: __init__.py  __main__.py  server.py
pg_tuner_mcp/src/pg_tuner_mcp/models/: __init__.py  schemas.py
pg_tuner_mcp/src/pg_tuner_mcp/tools/: __init__.py  collectors.py  config.py  workload.py
pg_tuner_mcp/tests/: __init__.py  test_placeholder.py
pg_workload/: .gitignore  Makefile  README.md  go.mod
pg_workload/cmd/pg_workload/: config_cmd.go  data.go  main.go  profile_cmd.go  report_cmd.go  run.go  schema.go  simulate.go  version.go
pg_workload/configs/: example.yaml
pg_workload/docs/: QUICKSTART.md  SIMULATION.md
pg_workload/internal/clock/: clock.go  clock_test.go  real.go  simulated.go  ticker.go
pg_workload/internal/config/: config.go  config_test.go
pg_workload/internal/controller/: controller_test.go  load_controller.go  metrics.go  rate_limiter.go  worker_pool.go
pg_workload/internal/database/: pool.go  pool_test.go
pg_workload/internal/events/: cron_parser.go  event.go  event_effects.go  events_test.go  preset_events.go  scheduler.go  yaml_parser.go
pg_workload/internal/executor/: executor.go  executor_test.go  query_selector.go  query_selector_test.go  simulation_executor.go  simulation_loop.go  simulation_worker.go  worker.go
pg_workload/internal/metrics/: collector.go  collector_test.go  snapshot.go
pg_workload/internal/pattern/: interpolation.go  load_pattern.go  (+3 more)
pg_workload/profiles/: oltp_standard.yaml
(+33 files in other folders)
