[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg_tuner_mcp"
version = "0.1.0"
description = "MCP server for PostgreSQL tuning analysis with pg_workload integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "pg_tuner team"}
]
keywords = ["mcp", "postgresql", "tuning", "benchmark", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
pg_tuner_mcp = "pg_tuner_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_tuner_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
